@@ -127,6 +127,7 @@ Check '"eixTk/ptr_list\.h"' -e 'eix::ptr_list'
 Check '"eixTk/ptr_set\.h"' -e 'eix::ptr_set'
 Check '"eixTk/stringutils\.h"' -e 'split[^- ]' -e isdigit -e '[^a-z]isal[np]' -e isspace -e isdigit -e isalpha -e isalnum -e is_numeric -e tolower -e toupper -e to_lower -e trim -e StringHash -e escape_string -e localeC -e match_list -e slot_subslot -e casecontains -e caseequal -e my_atoi
 Check '"eixTk/unused\.h"' -e '[^_]UNUSED' -e 'ATTRIBUTE_UNUSED'
+Check '"eixTk/delete\.h"' -e 'ASSIGN_DELETE'
 Check '"portage/basicversion\.h"' -e 'BasicVersion' -e 'BasicPart'
 CheckWithout '"search/packagetest\.h"' -e 'PackageTest::'
 
