@@ -57,6 +57,7 @@ src/eixTk/auto_list.h
 src/eixTk/compare.cc
 src/eixTk/compare.h
 src/eixTk/constexpr.h
+src/eixTk/delete.h
 src/eixTk/diagnostics.h
 src/eixTk/eixint.h
 src/eixTk/filenames.cc
