@@ -902,7 +902,7 @@ AddOption(STRING, "MATCH_ALGORITHM_SUBSTRING",
 	"It is a regular expression used in DEFAULT_MATCH_ALGORITHM for substring."));
 
 AddOption(STRING, "MATCH_ALGORITHM_EXACT",
-	"^[@]|^[0-9]+$", P_("MATCH_ALGORITHM_EXACT",
+	":|^[@=]|^[0-9]+$", P_("MATCH_ALGORITHM_EXACT",
 	"This variable is only used for delayed substitution.\n"
 	"It is a regular expression used in DEFAULT_MATCH_ALGORITHM for exact."));
 
