@@ -39,6 +39,30 @@ using std::string;
 typedef map<string, Levenshtein> LevenshteinMap;
 LevenshteinMap *FuzzyAlgorithm::levenshtein_map = NULLPTR;
 
+bool BaseAlgorithm::operator()(const char *s, Package *p, bool simplify) {
+	if(can_simplify() && unlikely(!have_simplified) && likely(simplify)) {
+		have_simplified = true;
+		// cut out the first nonempty valid search string
+		for(string::size_type i = 0; i < search_string.length(); ++i) {
+			if(likely(is_valid_pkgpath(search_string[i]))) {
+				if(unlikely(i > 0)) {
+					search_string.erase(0, i);
+				}
+				break;
+			}
+		}
+		for(string::size_type i = 0; i < search_string.length(); ++i) {
+			if(unlikely(!is_valid_pkgpath(search_string[i]))) {
+				if(likely(i > 0)) {
+					search_string.erase(i);
+				}
+				break;
+			}
+		}
+	}
+	return (*this)(s, p);
+}
+
 void FuzzyAlgorithm::init_static() {
 	eix_assert_static(levenshtein_map == NULLPTR);
 	levenshtein_map = new LevenshteinMap;
@@ -50,7 +74,7 @@ bool FuzzyAlgorithm::compare(Package *p1, Package *p2) {
 }
 
 
-bool FuzzyAlgorithm::operator()(const char *s, Package *p) {
+bool FuzzyAlgorithm::operator()(const char *s, Package *p) const {
 	eix_assert_static(levenshtein_map != NULLPTR);
 	Levenshtein d(get_levenshtein_distance(search_string.c_str(), s));
 	bool ok(d <= max_levenshteindistance);
@@ -62,17 +86,17 @@ bool FuzzyAlgorithm::operator()(const char *s, Package *p) {
 	return ok;
 }
 
-bool ExactAlgorithm::operator()(const char *s, Package *p ATTRIBUTE_UNUSED) {
+bool ExactAlgorithm::operator()(const char *s, Package *p ATTRIBUTE_UNUSED) const {
 	UNUSED(p);
 	return (strcmp(search_string.c_str(), s) == 0);
 }
 
-bool BeginAlgorithm::operator()(const char *s, Package *p ATTRIBUTE_UNUSED) {
+bool BeginAlgorithm::operator()(const char *s, Package *p ATTRIBUTE_UNUSED) const {
 	UNUSED(p);
 	return (strncmp(search_string.c_str(), s, search_string.size()) == 0);
 }
 
-bool EndAlgorithm::operator()(const char *s, Package *p ATTRIBUTE_UNUSED) {
+bool EndAlgorithm::operator()(const char *s, Package *p ATTRIBUTE_UNUSED) const {
 	UNUSED(p);
 	string::size_type l(strlen(s));
 	string::size_type sl(search_string.size());
@@ -82,7 +106,7 @@ bool EndAlgorithm::operator()(const char *s, Package *p ATTRIBUTE_UNUSED) {
 	return (strcmp(search_string.c_str(), s + (l - sl)) == 0);
 }
 
-bool PatternAlgorithm::operator()(const char *s, Package *p ATTRIBUTE_UNUSED) {
+bool PatternAlgorithm::operator()(const char *s, Package *p ATTRIBUTE_UNUSED) const {
 	UNUSED(p);
 	return (fnmatch(search_string.c_str(), s, FNMATCH_FLAGS) == 0);
 }
